charts/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kitchensink-spring
  labels:
    app: kitchensink-spring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kitchensink-spring
  template:
    metadata:
      labels:
        app: kitchensink-spring
    spec:
      containers:
        - name: kitchensink-spring
          image: kitchensink-spring:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 256Mi
