charts/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kitchensink-spring
  labels:
    app: kitchensink-spring
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: kitchensink-spring
