charts/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kitchensink-spring
  labels:
    app: kitchensink-spring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: kitchensink-spring.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kitchensink-spring
                port:
                  name: http
